--- a/website/templates/patient.html
+++ b/website/templates/patient.html
@@ -15,12 +15,14 @@
         <strong>Blood Type:</strong> <p class="card-text">{{ patient_record.blood_type }}</p>
         <strong>Allergies:</strong> <p class="card-text">{{ patient_record.allergies }}</p>
         <strong>Current Medications:</strong> <p class="card-text">{{ patient_record.current_medications }}</p>
+        <strong>Symptoms:</strong> <p class="card-text">{{ patient_record.symptoms }}</p>
+
         
         <!-- Agrega más campos según sea necesario -->
 
         <a href="{% url "home" %}" class="btn btn-secondary">Back</a>
-        <a href="{% url "update_record" patient_record.id %}" class="btn btn-secondary">Update</a>
-        <a href="{% url "delete_record" patient_record.id %}" class="btn btn-danger">Delete</a>
+        <a href="{% url "update_patient" patient_record.id %}" class="btn btn-secondary">Update</a>
+        <a href="{% url "delete_patient" patient_record.id %}" class="btn btn-danger">Delete</a>
     </div>
 </div>
 
