--- a/website/templates/update_patient.html
+++ b/website/templates/update_patient.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %} 
-<h1>Add Record</h1>
-
+<h1>Update Patient</h1>
 </br>
-<form method='POST' action="{%url 'add_record' %}" enctype="multipart/form-data">
+<form method='POST' >
     {% csrf_token %}
     {{ form.as_p }}
 
 
-
-    <button type="submit" class="btn btn-primary">Add</button>
     <a href="{% url "home" %}" class="btn btn-secondary">Back</a>
+    <button type="submit" class="btn btn-primary">Update</button>
+</br>
+</br>
+</br>
 </form>
 
 
